--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<head>
+	<title>
+		Memory Game
+	</title>
+	<link rel="stylesheet" types="text/css" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+<nav class="clearfix">
+	<a href="#">Instructions</a>
+	<a href="#">Game</a>
+
+</nav>
+
+</head>
+<body>
+	<h1>Memory Game</h1>
+	<h2>Instructions</h2>
+	<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso, or Pairs, is a card game in which all of the cards are laid facedown on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
+
+	</p>
 	
-  <head>
-    <title>Memory Game</title>
-  </head>
-  
-    <nav class="clearfix">
-      <a href="#">Instructions</a>
-      <a href="#">Game</a>
-    </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
-  
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
+	<hr>
 
-     </body>
+<div class="board">
+	<div class="card"></div>
+	<div class="card"></div>
+	<div class="card"></div>
+	<div class="card"></div>
+</div>
 
+<footer>
+	Created with <i class="fa fa-heart"></i> by <span class="name">GA</span>
+</footer>
+
+<script src="main.js"></script>
+</body>
 
 </html>
