--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -24,11 +24,15 @@
 	
 	<hr>
 
-<div class="board">
-	<div class="card"></div>
-	<div class="card"></div>
-	<div class="card"></div>
-	<div class="card"></div>
+<div class="board" id="game-board">
+	
+<!--
+<div class="card"></div> 
+<div class="card"></div>
+<div class="card"></div>
+<div class="card"></div>
+//-->
+
 </div>
 
 <footer>
